fix IE bug where .layout has whitespace between footer on tablet and smaller

--- a/src/assets/toolkit/styles/5-objects/_objects.layouts.scss
+++ b/src/assets/toolkit/styles/5-objects/_objects.layouts.scss
@@ -79,6 +79,18 @@
     }
   }
 
+  /* IE fix for tablet and smaller where layout has white space below*/
+
+@media screen and (max-width:58em) and (-ms-high-contrast: none), (-ms-high-contrast: active)  {
+  
+  
+          /* IE10+ CSS styles go here */
+          .layout {
+              height: 100%;
+          }
+      
+  }
+
   // Sticky footer - stretch content to maximum
   body > .layout {
     display: block;
